header y reloj en header

--- a/index.html
+++ b/index.html
@@ -6,26 +6,22 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <table id="reloj" border='0'>
-    <tr>
-      <td>
-          <div id='hora'></div>
-      </td>
-      <td>
-          <div>:</div>
-      </td>
-      <td>
-          <div id='minuto'></div>
-      </td>
-      <td>
-          <div>:</div>
-      </td>
-      <td>
-          <div id='segundo'></div>
-      </td>
-    </tr>
-  </table>
+  <div class="demo-1">                
+    <div class="content">
+      <div id="large-header" class="large-header">
+        <canvas id="demo-canvas"></canvas>
+        <h1 class="main-title">Ana<span class="thin">Carhuaz </span></h1>        
+        <div class="content-reloj">
+          <div class="inline" id='hora'></div>
+          <div class="inline">:</div>
+          <div class="inline" id='minuto'></div>
+          <div class="inline">:</div>
+          <div class="inline" id='segundo'></div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script type="text/javascript" src="js/main.js"></script>
-
+  <script src="js/demo-1.js"></script>
 </body>
 </html>
