--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       </div>
     </div>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script type="text/javascript" src="js/TweenLite.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
-  <script src="js/demo-1.js"></script>
+  <script type="text/javascript" src="js/demo-1.js"></script>
 </body>
 </html>
