--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div class="content">
       <div id="large-header" class="large-header">
         <canvas id="demo-canvas"></canvas>
-        <h1 class="main-title">Ana<span class="thin">Carhuaz </span></h1>        
+        <div class="body" style="width:500px;height: 500px; background: red;position:absolute; top: 5% ; left:35%;">
+            <h3 class="saludo" id="mostrarSaludo"></h3>
+            <input id="name" type="text" placeholder="Ingresa tu Nombre">
+        </div>       
         <div class="content-reloj">
           <div class="inline" id='hora'></div>
           <div class="inline">:</div>
