--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <div class="body" style="width:500px;height: 500px; background: red;position:absolute; top: 5% ; left:35%;">
             <h3 class="saludo" id="mostrarSaludo"></h3>
             <input id="name" type="text" placeholder="Ingresa tu Nombre">
+            <button id="btn"> Ver significado </button>
+            <label id="significadoName"></label>
         </div>       
         <div class="content-reloj">
           <div class="inline" id='hora'></div>
