--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="content">
       <div id="large-header" class="large-header">
         <canvas id="demo-canvas"></canvas>
-        <div class="body" style="width:500px;height: 500px; rgba(24, 104, 136, 0.85);position:absolute; top: 5% ; left:33%;">
+        <div class="body" style="width:500px;height: 500px; background: rgba(24, 104, 136, 0.85);position:absolute; top: 5% ; left:33%;border-radius: 7px;">
             <h3 class="saludo" id="mostrarSaludo"></h3>
             <form style="margin-top: 24%;margin-left: 2%;">
               <input id="name" type="text" placeholder="Ingresa tu Nombre" style="
@@ -36,8 +36,9 @@
       </div>
     </div>
   </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script type="text/javascript" src="js/TweenLite.min.js"></script>
+  <script type="text/javascript" src="js/EasePack.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
   <script type="text/javascript" src="js/demo-1.js"></script>
 </body>
