fecha de nacimiento

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <button id="btnLastName" type="button"> Que significa tu Apellido</button> <br>
             <label id="significadoLastName"></label>
             <br>
+            <input id="fechanac" type="date" placeholder="Ingresa tu Fecha de nacimiento"><br>
+            <button id="btnfechanac" type="button">Que dice tu fecha de nacimiento</button> <br>
+            <label id="significadoFechaNac"></label>
             <br>
           </form>  
           <div id="bye" style="display:none;margin-left: 2%; color: #fff;">
